--- a/style.css
+++ b/style.css
@@ -1,11 +1,14 @@
 * {
-  padding: 20px;
+  padding: 0px;
   margin: 0;
   box-sizing: border-box;
   font-size: 20px;
 }
 body {
   height: 100vh;
+}
+& > * {
+  padding: 20px;
 }
 .container {
   background-color: #1f6a73;
@@ -18,6 +21,10 @@ body {
   gap: 1.5rem;
   text-align: center;
   margin: auto;
+  
+  & > * {
+  padding: 20px;
+}
   /* width: 80%; */
 }
 header {
