--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
 
 .container {
-  background-color: #1f6a73;
+  /* background-color: #1f6a73; */
+  width:100%;
   height: 100vh;
   padding: 1rem;
   display: grid;
